--- a/trees/index.html
+++ b/trees/index.html
@@ -13,7 +13,7 @@
 <body>
 
 </body>
-<div id="page_title">Wizarding Academy for Magic / trees</div>
+<div id="page_title">Wizarding Academy for Magic / Trees</div>
 <div id="navbar">
     <a id="nav_home" class="navbar_item" href="../home/index.html">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
@@ -32,5 +32,16 @@
         Cards
     </a>
 </div>
-<div id="page_content"></div>
+<div id="page_content">
+    <div id="controls">
+        <button id="prev_button">Prev</button>
+        <button id="download_button">Download</button>
+        <button id="download_all_button">Download All</button>
+        <button id="next_button">Next</button>
+    </div>
+    <div id="set_name"></div>
+    <canvas id="canvas">
+
+    </canvas>
+</div>
 </html>
