Added bulk download option to runes page

--- a/runes/index.html
+++ b/runes/index.html
@@ -43,6 +43,7 @@
         <button id="download_all_button">Download All</button>
         <button id="next_button">Next</button>
         <button id="toggle_side_button">Toggle Side</button>
+        <button id="toggle_bulk_button">Toggle Bulk</button>
     </div>
     <div id="set_name"></div>
     <canvas id="canvas">
