Cleaned stuff up and added a units page

--- a/units/index.html
+++ b/units/index.html
@@ -14,7 +14,7 @@
 <body>
 
 </body>
-<div id="page_title">Wizarding Academy for Magic / Runes</div>
+<div id="page_title">Wizarding Academy for Magic / Units</div>
 <div id="navbar">
     <a id="nav_home" class="navbar_item" href="../home/index.html">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
@@ -40,18 +40,5 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M200-160v-280h-80v-80h240v80h-80v280h-80Zm0-440v-200h80v200h-80Zm160 0v-80h80v-120h80v120h80v80H360Zm80 440v-360h80v360h-80Zm240 0v-120h-80v-80h240v80h-80v120h-80Zm0-280v-360h80v360h-80Z"/></svg>        Units
     </a>
 </div>
-<div id="page_content">
-    <div id="controls">
-        <button id="prev_button">Prev</button>
-        <button id="download_button">Download</button>
-        <button id="download_all_button">Download All</button>
-        <button id="next_button">Next</button>
-        <button id="toggle_side_button">Toggle Side</button>
-        <button id="toggle_bulk_button">Toggle Bulk</button>
-    </div>
-    <div id="set_name"></div>
-    <canvas id="canvas">
-
-    </canvas>
-</div>
+<div id="page_content"></div>
 </html>
