--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
     </head>
     <body>
-        <script>window.location.href = `${window.location.origin}/home`</script>
+        <script>window.location.href = `${window.location.origin}/home/`</script>
     </body>
 </html>
