--- a/runes/index.html
+++ b/runes/index.html
@@ -48,6 +48,7 @@
         <button id="next_button">Next</button>
         <button id="toggle_side_button">Toggle Side</button>
         <button id="toggle_bulk_button">Toggle Bulk</button>
+        <button id="flip_button">Flip</button>
     </div>
     <div id="set_name"></div>
     <canvas id="canvas">
