--- a/graphs/index.html
+++ b/graphs/index.html
@@ -45,5 +45,8 @@
         Graphs
     </a>
 </div>
-<div id="page_content"></div>
+<div id="page_content">
+    <canvas id="canvas"></canvas>
+
+</div>
 </html>
